[safi] UPDATE : route
