# src/swagger.json
@@ -21,7 +21,7 @@
       }
     ],
     "paths": {
-      "/api/user/register": {
+      "/api/v1/user/register": {
         "post": {
           "tags": ["User"],
           "summary": "Register a new user",
@@ -49,7 +49,7 @@
           }
         }
       },
-      "/api/user/login": {
+      "/api/v1/user/login": {
         "post": {
           "tags": ["User"],
           "summary": "Log in an existing user",
@@ -77,7 +77,7 @@
           }
         }
       },
-      "/api/user/forgot-password": {
+      "/api/v1/user/forgot-password": {
       "post": {
         "tags": ["User"],
         "summary": "Send password reset token to user's email",
@@ -111,7 +111,7 @@
         }
       }
     },
-    "/api/user/reset-password": {
+    "/api/v1/user/reset-password": {
       "post": {
         "tags": ["User"],
         "summary": "Reset the user's password using the token",
@@ -158,7 +158,7 @@
     ]
       }
     },
-      "/api/note/": {
+      "/api/v1/note/": {
         "post": {
           "tags": ["Notes"],
           "summary": "Create a new note",
@@ -213,7 +213,7 @@
       },
      
         
-      "/api/note/{id}": {
+      "/api/v1/note/{id}": {
         "get": {
           "tags": ["Notes"],
           "summary": "Get a note by its ID",
@@ -319,7 +319,7 @@
           ]
         }
       },
-      "/api/note/archive/{id}": {
+      "/api/v1/note/archive/{id}": {
         "put": {
           "tags": ["Notes"],
           "summary": "Toggle the archive status of a note",
@@ -351,7 +351,7 @@
           ]
         }
       },
-      "/api/note/trash/{id}": {
+      "/api/v1/note/trash/{id}": {
         "put": {
           "tags": ["Notes"],
           "summary": "Toggle the trash status of a note",
